# trimRunner

./: README.md  callTrimRunner.bat  collisionParser.cpp  collisionParser.py  collisionParser_quick.cpp  genTracks.ipynb  parserUtils.py  root_to_h5.py  sorter.cpp  trimEfficiencyCalculator.py  trimRunner.py  trimRunner_parallel.py  trimUtils.py
collisionParser/: CMakeLists.txt  Makefile  callCollisionParser.sh  collisionParser.cpp  collisionParser.py  parserUtils.py
collisionParser_quick/: make.bat
old/: root_to_h5.py
old/collisionParser_quick/: CMakeLists.txt  collisionParser_quick.cpp
trimRunner/: callTrimRunner.sh  config.jsonc  runScripts.sh  trimRunner.py  trimUtils.py
trimRunner/config/: annotated.jsonc
